2.3.0

- New: API xmp_datetime_compare().
- Bug #94065:
  - New: API xmp_files_can_put_xmp_xmpstring() and xmp_files_can_put_xmp_cstr()
    variants.
  - New: API xmp_files_put_xmp_xmpstring() and xmp_files_put_xmp_cstr()
    variants.
  - New: API xmp_files_get_xmp_xmpstring() variant.

2.2.3

- Bug #90380: Fix potential crash with corrupt TIFF file.
- Bug #14612: Better Solaris compilation fix.
- Fix header to pass -Wstrict-prototypes

2.2.2 - 2014/08/31

- Public header cleanup and documentation update.
- Update Doxygen config.
- Bug #73058: Add missing include for MacOS.
- Bug #72810: Fix typo in date test in MP3 handler.
- Bug #83313: Fix crash on invalid Exif (from Samsung)
- Fix valgrind testing for xmpcore.sh
- Fix delete / delete[] mismatch in ID3_Support.hpp

2.2.1 - 2013/06/29

- Bug #54011: Use POSIX API for files on MacOS. (Misty De Meo)
- Bug #58175: Replace OS X FlatCarbon headers. (Misty De Meo)
- Added a manpage for exempi(1).
- Added the -n option to the command line for arbitrary namespaces.

2.2.0 - 2012/02/21

- New 'exempi' command line tool.
- Upgrade XMPCore to Adobe XMP 5.1.2
  - Quicktime support now works without Quicktime.
  - Reconciliation with ID3v2.
  - "Blessed" 64-bits support (we already had it in exempi).
  - Slight change in the way XMP are written for MWG compliance.
  - Fixed a serious bug with RIFF.
  - Change in the way local text encoding is dealt with.
  - Alternative languages behave slightly differently by changing
    how the default language property is managed.
  - Probably a bunch of bugs fixed that I don't know about.
- Update unit tests.
  - Refactor the fixtures.
- Use automake silent rules instead of shave. (build only)
- "make dist" generate a bzip2 archive as well. (build only)
- Remove some obsolete warning flags. (build only)
- Build xmpcommandtool
- New: API xmp_files_get_format_info().
- New: API xmp_files_check_file_format().
- New: API xmp_files_get_file_info().